zero-schema-derive/tests/ui/fail/01_poison_options.stderr
error: duplicate zero option `endian`
 --> tests/ui/fail/01_poison_options.rs:2:47
  |
2 | #[derive(ZeroSchema)] #[zero(endian="little", endian="big")] struct Bad { #[zero(capacity=4, capacity=5)] x:u32, #[zero(tag_field=mis...
  |                                               ^^^^^^

error: expected `,`
 --> tests/ui/fail/01_poison_options.rs:2:53
  |
2 | #[derive(ZeroSchema)] #[zero(endian="little", endian="big")] struct Bad { #[zero(capacity=4, capacity=5)] x:u32, #[zero(tag_field=mis...
  |                                                     ^

error: duplicate zero option `capacity`
 --> tests/ui/fail/01_poison_options.rs:2:94
  |
2 | #[derive(ZeroSchema)] #[zero(endian="little", endian="big")] struct Bad { #[zero(capacity=4, capacity=5)] x:u32, #[zero(tag_field=mis...
  |                                                                                              ^^^^^^^^

error: expected `,`
 --> tests/ui/fail/01_poison_options.rs:2:102
  |
2 | #[derive(ZeroSchema)] #[zero(endian="little", endian="big")] struct Bad { #[zero(capacity=4, capacity=5)] x:u32, #[zero(tag_field=mis...
  |                                                                                                      ^

error: `capacity` is not applicable to this field
 --> tests/ui/fail/01_poison_options.rs:2:91
  |
2 | #[derive(ZeroSchema)] #[zero(endian="little", endian="big")] struct Bad { #[zero(capacity=4, capacity=5)] x:u32, #[zero(tag_field=mis...
  |                                                                                           ^

error: tag_field is only applicable to Schema payload fields
 --> tests/ui/fail/01_poison_options.rs:2:143
  |
2 | ...ro(capacity=4, capacity=5)] x:u32, #[zero(tag_field=missing)] y:u8 }
  |                                                                    ^^
